[gd_scene load_steps=8 format=3 uid="uid://c1af3h23bqbvv"]

[ext_resource type="Script" uid="uid://b4dann3kdfg3k" path="res://scripts/lab_body.gd" id="1_sbaom"]
[ext_resource type="Script" uid="uid://p0x2f70nn1sy" path="res://scripts/selectable_canvas_group.gd" id="2_g0l2j"]
[ext_resource type="Texture2D" uid="uid://yrxt2sxidd3c" path="res://textures/old/FillSprites/scoopula_fill.png" id="4_g0l2j"]
[ext_resource type="Texture2D" uid="uid://cak418sbeesy5" path="res://textures/lab_objects/scoopula.svg" id="4_sbaom"]
[ext_resource type="Script" uid="uid://cvvkvehovfwuy" path="res://scripts/attachment_point.gd" id="7_na6ud"]
[ext_resource type="Script" uid="uid://sscbm7kfq4jj" path="res://scripts/container_component.gd" id="8_h2xov"]
[ext_resource type="Script" uid="uid://btbgnyoe2k5xc" path="res://scripts/scoopula_use_component.gd" id="9_fpj3u"]

[node name="Scoopula" type="RigidBody2D" groups=["attachment:scoopula", "zoom:scale"]]
collision_layer = 0
script = ExtResource("1_sbaom")
hover_name = "scoopula"
metadata/_custom_type_script = "uid://b4dann3kdfg3k"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -1)
rotation = -1.5707964
polygon = PackedVector2Array(7.82951, -34.7615, 2.82951, -29.7615, 1.82951, -26.7615, 1.82951, -23.7615, 1.82951, 56.2385, -3.17049, 56.2385, -3.17049, -27.7615, -4.17049, -29.7615, -7.17049, -32.7615, -9.17049, -34.7615, -10.1705, -37.7615, -10.1705, -46.7615, -10.1705, -52.7615, -9.17049, -54.7615, -7.17049, -55.7615, 5.82951, -55.7615, 7.82951, -54.7615, 8.82951, -53.7615, 8.82951, -51.7615, 8.82951, -37.7615)

[node name="SelectableCanvasGroup" type="CanvasGroup" parent="."]
rotation = -1.5707964
script = ExtResource("2_g0l2j")
metadata/_custom_type_script = "uid://p0x2f70nn1sy"

[node name="Sprite2D" type="Sprite2D" parent="SelectableCanvasGroup"]
position = Vector2(-7, 0)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_sbaom")

[node name="FillSprite" type="Sprite2D" parent="SelectableCanvasGroup"]
visible = false
position = Vector2(0.777375, -43.5091)
rotation = 3.14159
scale = Vector2(0.0325691, 0.027463)
texture = ExtResource("4_g0l2j")

[node name="ContainerComponent" type="Node2D" parent="."]
script = ExtResource("8_h2xov")
container_volume = 10.0
metadata/_custom_type_script = "uid://sscbm7kfq4jj"

[node name="UseComponent" type="Node2D" parent="." node_paths=PackedStringArray("container")]
script = ExtResource("9_fpj3u")
container = NodePath("../ContainerComponent")
volume_to_take = 1.0
volume_to_dispense = 1.0
metadata/_custom_type_script = "uid://c5xu35ldxvqog"

[node name="AttachmentPoint" type="Node2D" parent="." groups=["attachment:scoopula"]]
position = Vector2(-56, -0.5)
script = ExtResource("7_na6ud")
metadata/_custom_type_script = "uid://cvvkvehovfwuy"
